app/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth.default.svc.cluster.local:8080/auth"
    nginx.ingress.kubernetes.io/auth-response-headers: "Login"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: myapp-hello-charts
          servicePort: 8000
        path: /user
